# AdityaVikramPortfolio

./: .dockerignore  .env.docker  .gitignore  OPTIMIZATION_SUMMARY.md  QUICK_START.md  README.md  TODO.md  cloudflare-tunnel-config.yml  docker-compose.prod.yml  docker-compose.yml  docs.md  test-functionality.md  test_ollama_integration.py  test_setup.sh
.github/workflows/: README.md  deploy-ollama-proxy.yml  deploy-portfolio.yml  deploy-simple.yml  deploy.yml  deploy.yml.disabled  main.yml  main.yml.disabled  manual-deploy.yml.disabled  test.yml
docs/: INDEX.md  QUICK_START.md
docs/ai/: OLLAMA_SETUP.md  PROXY_SETUP.md  README.md
docs/content/: README.md
docs/deployment/: DOCKER.md  DOCKER_LOCAL.md  DOCKER_QUICK_START.md  GITHUB_ACTIONS.md  PRODUCTION.md  README.md
docs/operations/: MONITORING.md  TEST_RESULTS.md  TROUBLESHOOTING.md  WORKFLOW_MIGRATION_SUMMARY.md
frontend/: BLOG_README.md  Dockerfile  eslint.config.mjs  next.config.ts  nixpacks.toml  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  home-content.tsx  layout.tsx  page.tsx
frontend/components/: AnimatedShapes.tsx
frontend/lib/: crypto-polyfill.ts
nginx/: nginx.conf
ollama-proxy/: .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  lint.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  start.fish  start.sh  test-python-env.sh
scripts/: build-local.sh  docker-dev.sh  manage-portfolio.sh
v2/: .env.example  .gitignore  compose.yml  deploy.sh  dockerfile  next.config.ts  nixpacks.toml  package-lock.json  package.json
(+114 files in other folders)
